# Embedded_software_Contest_TAKEOUT

./: README.md
code_jetson_nano/em_depth/: CMakeLists.txt  package.xml
code_jetson_nano/em_depth/launch/: takeout.launch
code_jetson_nano/em_depth/scripts/: .black_ice_node.py.swp  black_ice_node.py  lidar_lee.py  linear_pca.py  mid_p.py  result.py  snowpub.py
code_jetson_nano/em_depth/src/: em_depth_node.cpp
code_jetson_nano/laser_to_pointcloud/src/: laser_to_pointcloud_node.cpp
code_raspberry/hyundai_em/: CMakeLists.txt  package.xml
code_raspberry/hyundai_em/launch/: hyundai.launch
code_raspberry/hyundai_em/src/: md_platform.py  result.py  result_lee.py  speed_limit.py  test_speed_limit.py  test_weather_rain.py  test_weather_snow.py  weather.py
code_raspberry/md_v2.0d/include/md/: com.hpp  robot.hpp
code_raspberry/md_v2.0d/launch/: md.launch
code_raspberry/md_v2.0d/msg/: monitor_msg.msg
code_raspberry/md_v2.0d/scripts/: md_platform.py
code_raspberry/md_v2.0d/src/: cmd_main.cpp  com.cpp  main.cpp  robot.cpp
code_raspberry/ublox_f9p/ntrip_ros/launch/: ntrip_ros.launch
code_raspberry/ublox_f9p/ntrip_ros/scripts/: ntripclient.py
code_raspberry/ublox_f9p/ublox_gps/src/: gps.cpp  node.cpp
